--- a/style.css
+++ b/style.css
@@ -1,18 +1,68 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 .container {
   display: grid;
   grid-template-columns: 1fr 4fr;
   grid-template-rows: 1fr 4fr;
+  font-family: 'Nunito', sans-serif;
+}
+
+body {
+  padding: 0;
+  margin: 0;
 }
 
 .sidebar {
   grid-row: 1/3;
+  background-color: #0ea5e9;
+  color: white;
+  padding-right: 30px;
+}
+
+.logo {
+  padding: 15px 20px;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.links li, .settings li {
+  padding: 4px 0px;
 }
 
 .header {
   grid-column: 2/3;
 }
 
+.header-info input {
+  border-radius: 7px;
+  background-color: gainsboro;
+  border: 0;
+}
+
 .content {
   grid-column: 2/3;
   grid-row: 2/3;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+
+.projects {
+  grid-row: 1/3;
+}
+
+.anouncements {
+  grid-column: 2/3;
+}
+
+.trending {
+  grid-column: 2/3;
+  grid-row: 2/3 ;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+ul {
+  list-style-type: none;
 }
