--- a/style.css
+++ b/style.css
@@ -47,6 +47,13 @@ body {
 
 .projects {
   grid-row: 1/3;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+
+.card {
+  grid-row: 1/2;
+  grid-column: 1/3;
 }
 
 .anouncements {
